feat: enhance job management with CRUD operations and Google OAuth integration

--- a/gatewayServer/.env
+++ b/gatewayServer/.env
@@ -1,11 +1,32 @@
 MONGO_URI="mongodb+srv://freelancing:VtAGK7MnQRBBOJ6V@cluster0.kwuh4fr.mongodb.net/?retryWrites=true&w=majority&appName=Cluster0"
+#MONGO_URI=mongodb+srv://freelancing:VtAGK7MnQRBBOJ6V@cluster0.kwuh4fr.mongodb.net/?retryWrites=true&w=majority&appName=Cluster0
+#MONGO_URI=mongodb+srv://freelancing:VtAGK7MnQRBBOJ6V@cluster0.kwuh4fr.mongodb.net/freelancerProject?retryWrites=true&w=majority
+#MONGO_URI=mongodb+srv://ahmedabuseada22:2CykHQ1GHygpLNLE@eshop.6stkclr.mongodb.net/freelancerProject?retryWrites=true&w=majority
+#MONGO_URI=mongodb+srv://freelancing:VtAGK7MnQRBBOJ6V@cluster0.kwuh4fr.mongodb.net/freelancer
+#MONGO_URI=mongodb+srv://ahmedabuseada22:2CykHQ1GHygpLNLE@eshop.6stkclr.mongodb.net/freelancerProject?retryWrites=true&w=majority
+#MONGO_URI=mongodb://localhost:27017/freelancerProject22
 PORT=8000
 NODE_ENV=development
 ENDPOINT_AUTH=http://localhost:3000
 AUTH_SERVER=http://localhost:5000
+JOB_SERVER=http://localhost:5001
 AUTH_USER=anyname
 AUTH_PASS=0000
 JWT_ACCESS_TOKEN_SECRET=puhbWI1mIef635eMAYCesd0rsW_cd0P7Alfa4CRWfKk=
 JWT_REFRESH_TOKEN_SECRET=mdHV1QCIAuQJOaJm9dH1_22Ij7SfLkfPkZOKgYg8U_I=
 SESSION_KEY=65_ZiLCwBg9vEdHSA74WEY5XvtrmsKCPN3C2SRQKGeQ=
 INTERNAL_SECRET=f6IMwnQ1Y0LM3macM6kn1w6kBuFjp5yFqWT-9-zHzCs=
+GOOGLE_CLIENT_ID=471724704678-k3u4csoi6eiqj96c9d5k5bvtkd8l6f7p.apps.googleusercontent.com
+GOOGLE_CLIENT_SECRET=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
+GOOGLE_CALLBACK_URL=http://localhost:8000/auth/google/callback
+FRONTEND_URL=http://localhost:3000
+FRONTEND_SUCCESS_REDIRECT=http://localhost:3000/dashboard
+
+# This was inserted by `prisma init`:
+# Environment variables declared in this file are automatically made available to Prisma.
+# See the documentation for more detail: https://pris.ly/d/prisma-schema#accessing-environment-variables-from-the-schema
+
+# Prisma supports the native connection string format for PostgreSQL, MySQL, SQLite, SQL Server, MongoDB and CockroachDB.
+# See the documentation for all the connection string options: https://pris.ly/d/connection-strings
+
+#DATABASE_URL="mongodb+srv://root:randompassword@cluster0.ab1cd.mongodb.net/mydb?retryWrites=true&w=majority"
