--- a/.gitignore
+++ b/.gitignore
@@ -1,14 +1,35 @@
-# Default ignored files
-/shelf/
-/workspace.xml
-# Editor-based HTTP Client requests
-/httpRequests/
-# Datasource local storage ignored files
-/dataSources/
-/dataSources.local.xml
-/authServer/node_modules/
-/authServer/.env
-/communicationServer/node_modules/
-/communicationServer/.env
-/jobServer/node_modules/
-/jobServer/.env
+# Node dependencies
+**/node_modules/
+
+# Env files
+**/.env
+**/.env.*
+
+# Logs
+**/*.log
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+
+# Build outputs
+**/dist/
+**/build/
+**/out/
+
+# IDE/editor config
+.vscode/
+.idea/
+*.code-workspace
+
+# OS system files
+.DS_Store
+Thumbs.db
+
+# Package lock files (optional)
+**/package-lock.json
+**/yarn.lock
+**/pnpm-lock.yaml
+
+# Test coverage
+**/coverage/
+**/.nyc_output/
