--- a/gatewayServer/.env
+++ b/gatewayServer/.env
@@ -7,7 +7,8 @@ MONGO_URI="mongodb+srv://freelancing:VtAGK7MnQRBBOJ6V@cluster0.kwuh4fr.mongodb.n
 #MONGO_URI=mongodb://localhost:27017/freelancerProject22
 PORT=8000
 NODE_ENV=development
-ENDPOINT_AUTH=http://localhost:3000
+#ENDPOINT_AUTH=http://localhost:3000
+ENDPOINT_AUTH=https://fintech-alpha-seven.vercel.app
 AUTH_SERVER=http://localhost:5000
 JOB_SERVER=http://localhost:5001
 AUTH_USER=anyname
