--- a/authServer/package.json
+++ b/authServer/package.json
@@ -14,6 +14,9 @@
   "author": "ahmed abu seada, toka ismail",
   "type": "commonjs",
   "main": "index.js",
+    "engines": {
+        "node": ">=16.0.0"
+    },
   "scripts": {
     "test": "jest",
     "start": "cross-env NODE_ENV=production node index.js",
