--- a/authServer/package.json
+++ b/authServer/package.json
@@ -11,7 +11,7 @@
     "url": "git+https://github.com/ahmedaboseada/freelancerProject.git"
   },
   "license": "ISC",
-  "author": "ahmed abu seada, toka ismail",
+  "author": "Ahmed Abu Seada",
   "type": "commonjs",
   "main": "index.js",
     "engines": {
@@ -19,8 +19,8 @@
     },
   "scripts": {
     "test": "jest",
-    "start": "cross-env NODE_ENV=production node index.js",
-    "dev": "cross-env NODE_ENV=development nodemon index.js"
+    "start": "node index.js",
+    "dev": "nodemon index.js"
   },
   "devDependencies": {
     "cross-env": "^7.0.3",
