--- a/gatewayServer/.env
+++ b/gatewayServer/.env
@@ -5,7 +5,8 @@ MONGO_URI="mongodb+srv://freelancing:VtAGK7MnQRBBOJ6V@cluster0.kwuh4fr.mongodb.n
 #MONGO_URI=mongodb+srv://freelancing:VtAGK7MnQRBBOJ6V@cluster0.kwuh4fr.mongodb.net/freelancer
 #MONGO_URI=mongodb+srv://ahmedabuseada22:2CykHQ1GHygpLNLE@eshop.6stkclr.mongodb.net/freelancerProject?retryWrites=true&w=majority
 #MONGO_URI=mongodb://localhost:27017/freelancerProject22
-PORT=8000
+GATEWAYPORT=8000
+AUTHPORT=5000
 NODE_ENV=development
 #ENDPOINT_AUTH=http://localhost:3000
 ENDPOINT_AUTH=https://fintech-alpha-seven.vercel.app
