--- a/gatewayServer/package.json
+++ b/gatewayServer/package.json
@@ -14,11 +14,16 @@
   "author": "ahmed abu seada, toka ismail",
   "type": "commonjs",
   "main": "index.js",
-  "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "cross-env NODE_ENV=production node index.js",
-    "dev": "cross-env NODE_ENV=development nodemon index.js"
+  "engines": {
+    "node": ">=16.0.0"
   },
+  "scripts": {
+    "build": "echo 'No build step necessary'",
+    "start": "node index.js",
+    "dev": "nodemon index.js",
+    "test": "echo \"Error: no test specified\" && exit 1"
+  }
+,
   "devDependencies": {
     "@prisma/client": "^6.7.0",
     "cross-env": "^7.0.3",
