--- a/gatewayServer/.env
+++ b/gatewayServer/.env
@@ -1,16 +1,16 @@
-MONGO_URI="mongodb+srv://freelancing:VtAGK7MnQRBBOJ6V@cluster0.kwuh4fr.mongodb.net/?retryWrites=true&w=majority&appName=Cluster0"
 #MONGO_URI=mongodb+srv://freelancing:VtAGK7MnQRBBOJ6V@cluster0.kwuh4fr.mongodb.net/?retryWrites=true&w=majority&appName=Cluster0
 #MONGO_URI=mongodb+srv://freelancing:VtAGK7MnQRBBOJ6V@cluster0.kwuh4fr.mongodb.net/freelancerProject?retryWrites=true&w=majority
 #MONGO_URI=mongodb+srv://ahmedabuseada22:2CykHQ1GHygpLNLE@eshop.6stkclr.mongodb.net/freelancerProject?retryWrites=true&w=majority
 #MONGO_URI=mongodb+srv://freelancing:VtAGK7MnQRBBOJ6V@cluster0.kwuh4fr.mongodb.net/freelancer
 #MONGO_URI=mongodb+srv://ahmedabuseada22:2CykHQ1GHygpLNLE@eshop.6stkclr.mongodb.net/freelancerProject?retryWrites=true&w=majority
 #MONGO_URI=mongodb://localhost:27017/freelancerProject22
+MONGO_URI="mongodb+srv://freelancing:VtAGK7MnQRBBOJ6V@cluster0.kwuh4fr.mongodb.net/?retryWrites=true&w=majority&appName=Cluster0"
 GATEWAYPORT=8000
 AUTHPORT=5000
 NODE_ENV=development
 ENDPOINT_AUTH=https://fintech-alpha-seven.vercel.app
-AUTH_SERVER=http://localhost:5000
-JOB_SERVER=http://localhost:5001
+AUTH_SERVER=https://frauthserver.vercel.app
+JOB_SERVER=https://frjobserver.vercel.app
 AUTH_USER=anyname
 AUTH_PASS=0000
 JWT_ACCESS_TOKEN_SECRET=puhbWI1mIef635eMAYCesd0rsW_cd0P7Alfa4CRWfKk=
