--- a/package.json
+++ b/package.json
@@ -4,19 +4,51 @@
   "description": "Freelancer Project Monorepo",
   "main": "index.js",
   "scripts": {
-    "start": "concurrently \"PORT=3000 npm run start --prefix authServer\" \"PORT=3001 npm run start --prefix gatewayServer\" \"PORT=3002 npm run start --prefix jobServer\" \"PORT=3003 npm run start --prefix communicationServer\"",
+    "start": "node gatewayServer/index.js",
     "dev": "concurrently \"PORT=3000 npm run dev --prefix authServer\" \"PORT=3001 npm run dev --prefix gatewayServer\" \"PORT=3002 npm run dev --prefix jobServer\" \"PORT=3003 npm run dev --prefix communicationServer\"",
-    "start:auth": "PORT=3000 npm run start --prefix authServer",
-    "start:gateway": "PORT=3001 npm run start --prefix gatewayServer",
-    "start:job": "PORT=3002 npm run start --prefix jobServer",
+    "start:auth": "PORT=5000 npm run start --prefix authServer",
+    "start:gateway": "PORT=8000 npm run start --prefix gatewayServer",
+    "start:job": "PORT=5001 npm run start --prefix jobServer",
     "start:comm": "PORT=3003 npm run start --prefix communicationServer",
-    "dev:auth": "PORT=3000 npm run dev --prefix authServer",
-    "dev:gateway": "PORT=3001 npm run dev --prefix gatewayServer",
-    "dev:job": "PORT=3002 npm run dev --prefix jobServer",
+    "dev:auth": "PORT=5000 npm run dev --prefix authServer",
+    "dev:gateway": "PORT=8000 npm run dev --prefix gatewayServer",
+    "dev:job": "PORT=5001 npm run dev --prefix jobServer",
     "dev:comm": "PORT=3003 npm run dev --prefix communicationServer"
   },
   "devDependencies": {
-    "concurrently": "^8.2.2"
+    "concurrently": "^8.2.2",
+    "@prisma/client": "^6.7.0",
+    "cross-env": "^7.0.3",
+    "eslint": "^8.57.1",
+    "eslint-config-airbnb": "^19.0.4",
+    "eslint-config-prettier": "^10.1.5",
+    "eslint-plugin-import": "^2.31.0",
+    "eslint-plugin-jsx-a11y": "^6.10.2",
+    "eslint-plugin-node": "^11.1.0",
+    "eslint-plugin-prettier": "^5.4.0",
+    "eslint-plugin-react": "^7.37.5",
+    "nodemon": "^3.1.10",
+    "prettier": "^3.5.3"
+  },
+  "dependencies": {
+    "bcrypt": "^5.1.1",
+    "body-parser": "^2.2.0",
+    "connect-mongo": "^5.1.0",
+    "cookie-parser": "^1.4.7",
+    "cookie-session": "^2.1.0",
+    "cors": "^2.8.5",
+    "dotenv": "^16.5.0",
+    "express": "^5.1.0",
+    "express-async-handler": "^1.2.0",
+    "express-session": "^1.18.1",
+    "express-validator": "^7.2.1",
+    "jsonwebtoken": "^9.0.2",
+    "mongoose": "^8.14.1",
+    "morgan": "^1.10.0",
+    "node-fetch": "^2.7.0",
+    "passport": "^0.7.0",
+    "passport-google-oauth20": "^2.0.0",
+    "prisma": "^6.7.0"
   },
   "author": "ahmed abu seada, toka ismail",
   "license": "ISC",
