--- a/authServer/package.json
+++ b/authServer/package.json
@@ -14,12 +14,12 @@
   "author": "Ahmed Abu Seada",
   "type": "commonjs",
   "main": "api/index.js",
-    "engines": {
-        "node": ">=16.0.0"
-    },
+  "engines": {
+    "node": ">=16.0.0"
+  },
   "scripts": {
     "test": "jest",
-    "start": "cross-env NODE_ENV=production node index.js",
+    "start": "node index.js",
     "dev": "cross-env NODE_ENV=development nodemon index.js"
   },
   "devDependencies": {
@@ -56,6 +56,7 @@
     "oauth": "^0.10.2",
     "oauth2": "^0.0.1",
     "passport": "^0.7.0",
-    "passport-google-oauth20": "^2.0.0"
+    "passport-google-oauth20": "^2.0.0",
+    "serverless-http": "^3.2.0"
   }
 }
