--- a/gatewayServer/package.json
+++ b/gatewayServer/package.json
@@ -22,8 +22,7 @@
     "start": "node index.js",
     "dev": "nodemon index.js",
     "test": "echo \"Error: no test specified\" && exit 1"
-  }
-,
+  },
   "devDependencies": {
     "@prisma/client": "^6.7.0",
     "cross-env": "^7.0.3",
@@ -56,6 +55,7 @@
     "node-fetch": "^2.7.0",
     "passport": "^0.7.0",
     "passport-google-oauth20": "^2.0.0",
-    "prisma": "^6.7.0"
+    "prisma": "^6.7.0",
+    "serverless-http": "^3.2.0"
   }
 }
