--- a/gatewayServer/package.json
+++ b/gatewayServer/package.json
@@ -38,6 +38,8 @@
     "prettier": "^3.5.3"
   },
   "dependencies": {
+    "@segment/analytics-node": "^2.2.1",
+    "@vercel/analytics": "^1.5.0",
     "bcrypt": "^5.1.1",
     "body-parser": "^2.2.0",
     "connect-mongo": "^5.1.0",
