Refactor job routes and middleware; update main entry point in package.json

--- a/authServer/package.json
+++ b/authServer/package.json
@@ -13,7 +13,7 @@
   "license": "ISC",
   "author": "Ahmed Abu Seada",
   "type": "commonjs",
-  "main": "api/index.js",
+  "main": "index.js",
   "engines": {
     "node": ">=16.0.0"
   },
