feat(milestones): add milestone management functionality
- Added milestone routes to gatewayServer and jobServer.
- Implemented milestone creation, approval, rejection, submission, and deletion controllers.
- Enhanced milestone model with new fields: rejectionReason and deleted status.
- Introduced validation for milestone creation and submission.
- Updated jobServer to handle milestone-related operations and ensure job status updates based on milestone approvals.
- Implemented fetching of freelancer milestones with filtering and sorting options.
- Added error handling and response wrapping for consistent API responses.

--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "start": "node gatewayServer/index.js",
-    "dev": "concurrently \"PORT=3000 npm run dev --prefix authServer\" \"PORT=3001 npm run dev --prefix gatewayServer\" \"PORT=3002 npm run dev --prefix jobServer\" \"PORT=3003 npm run dev --prefix communicationServer\"",
+    "dev": "concurrently \"npm run dev --prefix authServer\" \"npm run dev --prefix gatewayServer\" \"npm run dev --prefix jobServer\"",
     "start:auth": "PORT=5000 npm run start --prefix authServer",
     "start:gateway": "PORT=8000 npm run start --prefix gatewayServer",
     "start:job": "PORT=5001 npm run start --prefix jobServer",
