--- a/authServer/package.json
+++ b/authServer/package.json
@@ -20,7 +20,7 @@
   "scripts": {
     "test": "jest",
     "start": "node index.js",
-    "dev": "cross-env NODE_ENV=development nodemon index.js"
+    "dev": "nodemon index.js"
   },
   "devDependencies": {
     "cross-env": "^7.0.3",
