--- a/jobServer/package.json
+++ b/jobServer/package.json
@@ -17,7 +17,7 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "node index.js",
-    "dev": "cross-env NODE_ENV=development nodemon index.js"
+    "dev": "nodemon index.js"
   },
   "devDependencies": {
     "cross-env": "^7.0.3",
