--- a/jobServer/package.json
+++ b/jobServer/package.json
@@ -33,6 +33,7 @@
     "express-validator": "^7.2.1",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.14.1",
-    "morgan": "^1.10.0"
+    "morgan": "^1.10.0",
+    "stripe": "^18.2.1"
   }
 }
